--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
+March[[:space:]]madness[[:space:]]poboljšanje[[:space:]]rezultata.zip filter=lfs diff=lfs merge=lfs -text
